welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: identifier expected but integer literal found.
 		return 10:00;
                          ^alarmClock:8: error: identifier expected but integer literal found.
 	if ( day == 0 ) return 10:00;
                                  ^alarmClock:9: error: identifier expected but integer literal found.
 	if(day==1) return 7:00;
                            ^alarmClock:10: error: identifier expected but integer literal found.
 	if(day==2) return 7:00;
                            ^alarmClock:11: error: identifier expected but integer literal found.
 	if(day==3) return 7:00;
                            ^alarmClock:12: error: identifier expected but integer literal found.
 	if(day==4) return 7:00;
                            ^alarmClock:13: error: identifier expected but integer literal found.
 	if(day==5) return 7:00;
                            ^alarmClock:14: error: identifier expected but integer literal found.
 	if(day==6) return 10:00;
                             ^